istio-manifests/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
  annotations:
    kubernetes.io/ingres.class: istio
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - hosts:
      - "devapi.evils.in"
    port:
      number: 80
      name: http
      protocol: HTTP
  - hosts:
      - "devapi.evils.in"
    port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: cert-devapi.evils.in
      #privateKey: sds
      #serverCertificate: sds
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gw-vsvc
  namespace: myservices
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/gateway
  http:
  - match:
    - uri:
        prefix: "/graphql"
    route:
    - destination:
        host: graphql-service
        port:
          number: 4000
  - match:
    - uri:
        prefix: "/md"
    route:
    - destination:
        host: masterdataservice
        port:
          number: 3000
  - match:
    - uri:
        prefix: "/price"
    route:
    - destination:
        host: priceservice
        port:
          number: 3000
  - match:
    - uri:
        prefix: "/warehouse"
    route:
    - destination:
        host: warehouseservice
        port:
          number: 3000
  - match:
    - uri:
        prefix: "/cart"
    route:
    - destination:
        host: cartservice
        port:
          number: 3000
  - match:
    - uri:
        prefix: "/v1/lager"
    route:
    - destination:
        host: warehouse-client-api-service
        port:
          number: 3333
